--- a/src/GameBoard/GameBoard.css
+++ b/src/GameBoard/GameBoard.css
@@ -1,3 +1,13 @@
 .game-board {
-    
+  display: grid;
+  grid-gap: 0;
+  border: 1px solid darkgrey;
+}
+
+.tile {
+  width: 20px;
+  height: 20px;
+  border: 1px solid darkgrey;
+  box-sizing: border-box;
+  line-height: 16px;
 }
