--- a/src/GameBoard/GameBoard.css
+++ b/src/GameBoard/GameBoard.css
@@ -23,3 +23,35 @@
 .tile-revealed {
   background-color: white;;
 }
+
+.tile-1 {
+  color: blue;
+}
+
+.tile-2 {
+  color: green;
+}
+
+.tile-3 {
+  color: red;
+}
+
+.tile-4 {
+  color: purple
+}
+
+.tile-5 {
+  color: maroon;
+}
+
+.tile-6 {
+  color: turquoise;
+}
+
+.tile-7 {
+  color: black;
+}
+
+.tile-8 {
+  color: gray;
+}
